# Polylab

./: .gitignore  READ.ME  TODO  app.py  callbacks.py  callbacks_cosmetics.py  callbacks_theme_toggle.py  defaults.py  factory.py  factory_new.py  forms.py  hardcoded.py  layout.py  modals.py  old.txt  pyproject.toml  requirements.txt  tabs.py  test.ipynb
.github/: copilot-instructions.md
assets/: styles.css
callbacks/: cosmetics.py  factory.py  hyperbolae.py  polynomials.py  sinusoidals.py
defaults/: chart_elements.py  cosmetics.py  dash_components.py  mathematics.py
old_new/: callbacks_theme_toggle.py  factory_new.py  misc.py  old_text.py
src/callbacks/: cosmetics.py  hyperbolae.py  polynomials.py  sinusoidals.py
tabs/: hyperbolae.py  instructions.py  introduction.py  linear_programming.py  polynomials.py  sinusoidals.py
