[project]
name = "polylab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-bootstrap-templates>=2.1.0",
    "dash-daq>=0.6.0",
    "dash-iconify>=0.1.2",
    "gunicorn>=23.0.0",
    "ruff>=0.13.2",
]
